# rust_playground

args/: Cargo.toml
args/src/: main.rs
backup_rust/: Cargo.toml  backup.txt  gremlin.txt  letty.txt
backup_rust/src/: main.rs
catr/: Cargo.toml
catr/src/: lib.rs
countdown_rust/countdown_rust/: Cargo.toml  main2.rs  mainold.rs
countdown_rust/countdown_rust/src/: main.rs
demo_dioxus/: Cargo.toml
demo_dioxus/src/: main.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
futures/: Cargo.toml
futures/src/: main.rs
rust_ssa/ezytutors/: Cargo.toml
rust_ssa/ezytutors/tutor-nodb/: Cargo.toml
rust_ssa/scenario1/: Cargo.toml
rust_ssa/scenario1/http/src/: httprequest.rs  httpresponse.rs
rust_ssa/scenario1/httpserver/: Cargo.toml
rust_ssa/scenario1/httpserver/public/: 404.html  health.html  index.html  styles.css
rust_ssa/scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
rust_ssa/scenario1/tcpclient/src/: main.rs
rust_ssa/scenario1/tcpserver/src/: main.rs
structs/src/: main.rs
todo_app/src/: main.rs  processes.rs  state.rs
todo_app/src/to_do/: enums.rs  mod.rs
todo_app/src/to_do/structs/: base.rs  done.rs  pending.rs
todo_app/src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
traits/src/: main.rs
web_app/: Cargo.toml
web_app/src/: main.rs
web_app/src/views/: mod.rs
web_app_fused/: main
web_app_fused/2/front_end/: package-lock.json  package.json
web_app_fused/2/web_app/: Cargo.toml  state.json
web_app_fused/web_app/: state.json
web_app_fused/web_app/src/: main.rs  state.rs
(+26 files in other folders)
