[package]
name = "countdown_rust"
version = "0.1.0"
authors = ["bee schmersal <bee@bee.gdn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.31"
egui_extras = { version = "*", features = ["all_loaders", "datepicker"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
egui = "0.25.0"
env_logger = "0.11.0"
eframe = "0.25.0"
chrono = "0.4.32"
